# dsa

./: .gitignore  .gitmodules  1.c  2.c  CMakeLists.txt  Makefile  README  README.md  Tex.c  arrange.c  binmain.c  binsearch.c  calc-main.c  constlist.c  define.h  expression.c  fac.c  factory-list.c  gcd-main.c  graph.c  greedy.c  hanoi-recurse.c  hanoi1.c  heapsort.c  horse1.c  matrix.c  menu.c  pi.c  python.md  queen.c  queen1.c  rand.c  regex.c  split.c  strlib.c  tmp.c  tom.c
alg/: 1-x2.c  Makefile  accurate.c  bool-infix.c  bool.c  calc-main.c  calc.c  define.h  double.c  fac-1.c  fac-ref.c  factory-list.c  factory.c  filesize.c  hashtable.c  heapsort-main.c  heapsort.c  hello.c  horse.c  isprime.c  magicsquare.c  matrix2.c  numsplit.c  qsort-apple.c  quickmain.c  quicksort.c  rand.c  stack_overflow.c  str.h  stringification.c  strlib.h  student.c  swap.c  usb.c  utils.h
alg/backtrace/: horse2.c  horse3.c  permutation.c  queen  queen.c
alg/bit/: oneInThrees.c  onesInBinary.c  swap.c
alg/dynamic_programming/: 0-1knapsack.c  MinimumJumps.c  WaysToNthStair.c  coinChange.c  dynamic_programming  fibonacci.c  knapSack.c  longestBitonicSubsequence.c  longestCommonSubsequence.c  longestCommonSubsequence.py  longestCommonSubstring.c  longestCommonSubstring.py  longestIncreasingSubsequence.c  longestPalindromicSubsequence.c  longestPalindromicSubstring.c  longest_common_subsequence.c  matrix_chain.c  maximum_subarray.c  numberOfBinaryStringsWithoutConsecutiveOne.c  palindromePartition.c  partitionProblem.c  rod-cutting  rod-cutting.c
alg/greedy/: greedy.c
alg/math/: addWithoutArithmetics.c  dfa_division.c  factorial.c  gcd.c  gcd.py  leapyear.c  multiplyWith7.c  oppositeSign.c  setMToNBitsToZero.c
alg/random/: reservoir_sampling.py
alg/recursion/: README.md  hanoi-stack.c
alg/search/: README.md  binmain.c  binsearch.c  nextGreaterNumberWithSameSetOfDigits.c  searchAlmostSorted.c
alg/sort/: Makefile  README  bubsort  bubsort.c  countingSort.c  heapsort  heapsort-main.c  heapsort.c  heapsort.h  insertionSort.c  maxmin-main.c  maxmin.c  qsort-apple.c  qsort-glibc.c  quickmain.c  quickselect-main.c  quickselect.c  quicksort  quicksort.c  quicksort.py
alg/statistics/: markovChain.py
alg/string/: concatenation.c  finiteAutomata.c  finiteAutomata.py  longestRepeatedSubstring.c  wildcard.c
cloud/kubernetes/: debug.md
data/nlp/: manifest.gt  manifest.infer
design/behavioral_pattern/: CMakeLists.txt  nullObject.cpp  observer.py
design/concurrency_pattern/: CMakeLists.txt  lockPattern.cpp  masterWorker.py
design/creational_pattern/: CMakeLists.txt  RAII.hpp  singleton.hpp  testFactory.cpp  testRAII.cpp  testSingleton.cpp
ds/: Makefile  dsadef.h  linkedlist  linkedmain.c  memory-layout-c  sqlist  sqlist.c  tree  tree.c
ds/hash-table/: hash-functions  hashtable.h
ds/linkedlist/: Makefile  dlinkedlist.c  dlinkedlist.h  dllistmain.c  linkedlist.c  linkedlist.h  listmain.c  listsort.c
ds/tree/: Makefile  b-tree.h  bstree.c  bstree.h  btree  btree.c  btree.h  btreemenu.c  rbtree.c  rbtree.h  tree.c  tree_from_post_in.cpp  tree_from_post_in_submit.cpp
formal_methods/tla+/: DistributedLockBroken.tla  Fibonacci.tla  README.md
language/asm/: hello.c  hello.cpp  hello.s
language/cpp/: CMakeLists.txt  base_headers.hpp  callCFunctionC.c  callCFunctionCPP.cpp  const_reference  const_reference.cpp  cpp.md  deadloop.cpp  debug.hpp  destructionOrder.cpp  include  inherit.cpp  isDerivedFrom.cpp  memoryleak.cpp  nestedException.cpp  profiler.hpp  questions.md  resource.md  template.cpp  tools.md  typePromotion.cpp  virtualFunction.cpp  vptr.cpp
language/cpp/bug/: CMakeLists.txt  README.md  data_race.c  dead_loop_and_memory_leak.cpp  memory_leak.cpp  use_after_free.cpp  use_after_scope.cpp  use_after_scope_multithreads.cpp
language/cpp/concurrency/: CCiA.md  CMakeLists.txt  atomicOperation.cpp  atomicReleaseConsume.cpp  bm_context_switch.cpp  bm_file_open.cpp  call_once.cpp  deadlock.cpp  falseSharing.cpp  gettime.cpp  helloConcurrency.cpp  packaged_task.cpp  promise.cpp  threads.cpp
language/cpp/hook/: CMakeLists.txt  futex.cpp  hook.c  memcpy.cpp  parse_memcpy.py  sched.cpp  test_hook.cpp
language/cpp/logger/: easylogging++.cc
language/cpp/memory/: memoryAlignment.cpp  memoryLayout.cpp  smartPointer.cpp  smartPointers.cpp  sum.s
language/cpp/os/: pageFault.cpp
language/cpp/stl/: CMakeLists.txt  bind.cpp  closure.cpp  debugCopy.cpp  iterator.cpp  map.cpp  move.cpp  numeric.cpp  pair.cpp  queue.cpp  set.cpp  transform.cpp
language/cpp/undefinedBehaviour/: uninitializedMember.cpp
language/python/: app.py
language/rust/: README.md  ownership.rs
linux/: ag.md  awk.md  bash.md  cat-tac.md  debuggers.md  dmesg.md  env.md  filesystem.md  find.md  gcc-ld-LD_PRELOAD.md  gcc-sanitizers.md  gdb.md  git.md  grep-egrep.md  heredoc.md  ip.md  iptables.md  jq.md  lsof.md  man.md  netstat.md  objdump.md  parallel-xargs.md  pipe.md  pmap.md  profile.md  ps-top-htop.md  sed.md  signal.md  sort-uniq.md  ssh.md  static-analysis.md  strace.md  su.md  taskset.md  tc.md  tee.md  tools.md  tracing.md  ulimit.md  (+2 more)
linux/monitor/: sar.md
linux/network/: curl.md  dns.md  env.md  route.md  tcpdump.md
linux/openssl/: tutor-openssl.sh
linux/proc/: proc.md
linux/third/: ffmpeg.md  mitmproxy.md  openssl.md  openssl.sh
parallel/cpu/: sum.cpp
parallel/cuda/: CMakeLists.txt
parallel/mpi/: CMakeLists.txt  README.md  ex_allreduce.py  mpi_hello_world.c
puzzle/c/: a23  a23.c  f35  f35.c  forkprint  forkprint.c  hello-std-out  hello-std-out.c  malloc  malloc.c  printabc  printabc.c  printreturn  printreturn.c
questions/: 2016-08-20.md  behaviour.md  facebook.md  google.md  problems.md  todo.md
questions/akunacapital/: CMakeLists.txt  matchingEngine.cpp  matchingEngine.out  matchingEngine1.in  matchingEngine1.run  matchingEngine2.in  matchingEngine2.run  matchingEngine3.in  matchingEngine3.out  matchingEngine4.in  matchingEngine4.out  matchingEngine5.in  test.sh  (+7 more)
unsolved/: 2016-08-20.md
utils/: os.h
wild/: Behaviour.md  google.md  problems.md  threeBucket.md
(+123 files in other folders)
