if (NOT BUILD_ARCH)
    set(BUILD_ARCH "-m64")
endif ()

add_executable(nestedException nestedException.cpp)
add_executable(vptr vptr.cpp)
# Add the -std=c++11 flag as an example
#set_source_files_properties( vptr.cpp PROPERTIES COMPILE_FLAGS "-m32 -std=c++11" )
#set_target_properties(vptr PROPERTIES COMPILE_FLAGS "-std=c++11")

set_target_properties(vptr PROPERTIES COMPILE_FLAGS "${BUILD_ARCH} -std=c++11" LINK_FLAGS ${BUILD_ARCH})
add_executable(callCFunction callCFunctionCPP.cpp callCFunctionC.c)
add_executable(virtualFunction virtualFunction.cpp)
add_executable(typePromotion typePromotion.cpp)
add_executable(destructionOrder destructionOrder.cpp)
add_executable(isDerivedFrom isDerivedFrom.cpp)
#add_executable(rand rand.cpp)
#add_executable(inherit inherit.cpp)
add_executable(template template.cpp)
add_executable(inherit inherit.cpp)
add_executable(pageFault os/pageFault.cpp)
add_executable(memoryLayout memory/memoryLayout.cpp)
add_executable(smartPointers memory/smartPointers.cpp)
add_executable(uninitializedMember undefinedBehaviour/uninitializedMember.cpp)
add_executable(constReference const_reference.cpp)

# stl
add_subdirectory(stl)
add_subdirectory(concurrency)
add_subdirectory(bug)
add_subdirectory (hook)
