add_executable(helloConcurrency helloConcurrency.cpp)
add_executable(threads threads.cpp)
add_executable(atomicOperation atomicOperation.cpp)
add_executable(falseSharing falseSharing.cpp)
add_executable(promise promise.cpp)
add_executable(call_once call_once.cpp)
add_executable(gettime gettime.cpp)
add_executable(packaged_task packaged_task.cpp)
add_executable(bm_context_switch bm_context_switch.cpp)
add_executable(bm_file_open bm_file_open.cpp)

set_target_properties(atomicOperation PROPERTIES COMPILE_FLAGS "${BUILD_ARCH} -std=c++11 -O2" LINK_FLAGS ${BUILD_ARCH})
